# ConwaysGameOfLife

./: .gitignore  Cargo.toml
src/: event_handling.rs  game_logic.rs  game_loop.rs  main.rs  rendering.rs  window_management.rs
