[package]
name = "ConwaysGameOfLife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"

# sdl2 = "0.35.2"
[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf"]